--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,18 @@ height: 100%;
 }
 }
 
+/* AddProduct */
+.card-registration .select-input.form-control[readonly]:not([disabled]) {
+  font-size: 1rem;
+  line-height: 2.15;
+  padding-left: .75em;
+  padding-right: .75em;
+  }
+  .card-registration .select-arrow {
+  top: 13px;
+  }
+  
+
 /* Add Product */
 /* .card-registration .select-input.form-control[readonly]:not([disabled]) {
   font-size: 1rem;
