--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,163 @@ height: 100%;
   top: 13px;
   } */
 
+  /* #app {
+    height: 100%;
+  }
+  html,
+  body {
+    position: relative;
+    height: 100%;
+  }
+  
+  body {
+    background: #eee;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #000;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+  
+    /* Center slide text vertically */
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  } */ 
+  .mySwiper{
+    /* height: 20rem; */
+    width: 100%;
+    margin-top: 30px;
+    text-align: center;
+    /* background-image: url(https://i.pinimg.com/originals/91/c1/00/91c1000191a3891a15efcf86b7f09215.png); */
+  }
+
+  .slide{
+    height: 70vh;
+    background-size: cover;
+    background-position: center;
+  }
+  .slide1{
+    background-image: url('../public/Screenshot\ \(243\).png');
+  }
+  .slide2{
+    background-image: url('../public/Screenshot\ \(244\).png');
+  }
+  .slide3{
+    background-image: url('../public/Screenshot\ \(247\).png');
+  }
+  .slide4{
+    background-image: url('../public/Screenshot\ \(248\).png');
+  }
+  .slide5{
+    background-image: url('../public/Screenshot\ \(249\).png');
+  }
+  .slide6{
+    background-image: url('../public/Screenshot\ \(250\).png');
+  }
+
+  
+
+  .form-bg{
+    background-image: url('https://i.pinimg.com/originals/fe/7f/ca/fe7fca52e5888fda290f25dda1545969.jpg');
+    background-position: center;
+    background-size: contain;
+  }
+  .bgimg{
+    background-image:url('../public/banner.png');
+    background-position:center;
+    background-size: cover;
+    /* height: 70%; */
+  }
+  .text{
+    color: black;
+    font-family: cursive;
+    font-weight: bolder;
+    text-decoration: #282c34;
+  }
+  .input{
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+    /* justify-content: center; */
+  }
+
+  
+/*======================
+    404 page
+=======================*/
+
+
+.page_404{ padding:40px 0; background:#fff; font-family: 'Arvo', serif;
+}
+
+.page_404  img{ width:100%;}
+
+.four_zero_four_bg{
+ 
+ background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+    height: 400px;
+    background-position: center;
+ }
+ 
+ 
+ .four_zero_four_bg h1{
+ font-size:80px;
+ }
+ 
+  .four_zero_four_bg h3{
+			 font-size:80px;
+			 }
+			 
+	.link_404{			 
+	color: #fff!important;
+    padding: 10px 20px;
+    background: #39ac31;
+    margin: 20px 0;
+    display: inline-block;}
+	.contant_box_404{ 
+    margin-top:-50px
+    }
+
+ /* .cardhome{ 
+    background-color: #2c2b2b;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px 2px;
+    margin-top: 40px;
+    color: #fff;
+    transition-duration: 300ms;
+    width: 20%;
+    background-size: cover;
+    height: 250px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .cardhome:hover {
+    transform: scale(1.1) rotate(1deg);
+  }
+
+  .row1{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }  */
+
+  
